# MySimplePortfolio

./: CMakeLists.txt  README.md  main.cpp
public/: Profile.html  index.html
public/scripts/: myquote.js
public/styles/: style.css
